update tomcat and Java version.